--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "## Regras da aplicação",
   "main": "index.js",
   "scripts": {
-    "start:dev": "tsx watch src/server.ts"
+    "start:dev": "tsx watch src/server.ts",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +28,15 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "20.12.7",
+    "@types/supertest": "6.0.2",
+    "@vitest/coverage-v8": "1.5.0",
+    "@vitest/ui": "1.5.0",
     "eslint": "8.57.0",
     "prisma": "5.12.1",
+    "supertest": "6.3.4",
     "tsx": "4.7.2",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "vite-tsconfig-paths": "4.3.2",
+    "vitest": "1.5.0"
   }
 }
